# Proyecto_ML_1

./: .gitignore  README.md  pyproject.toml
.dvc/: config
conf/base/: catalog.yml  parameters_data_engineering.yml
data/01_raw/: aac_intakes_outcomes.csv.dvc  animal_charity_donation_records.csv.dvc  synthetic_dog_breed_health_data.csv.dvc
docs/: objetivos.md
notebooks/: 01_business_understanding.ipynb  01_data_understanding.ipynb  02_data_understanding_aac.ipynb  02_data_understanding_charity_donation.ipynb  02_data_understanding_df_dog_breed.ipynb  03_data_preparation_aac.ipynb  03_data_preparation_charity_donation.ipynb  03_data_preparation_df_dog_breed.ipynb
notebooks/data/02_intermediate/: cleaned_charity_donations_notebook.csv  cleaned_dog_breed_notebook.csv
references/: datasets.md
src/dino_project/: __init__.py  __main__.py  settings.py
src/dino_project/pipelines/data_engineering/: nodes.py  pipeline.py
